Gradient Descent post: add URL to main.py, minor change in stackoverflow-dark.css to fix padding, major changes for D3.js scripts, major changes to the actual post html, minor change to the general post.html

--- a/services/frontend/static/css/stackoverflow-dark.css
+++ b/services/frontend/static/css/stackoverflow-dark.css
@@ -1,4 +1,4 @@
-pre code.hljs{display:block;overflow-x:auto;padding:1em}code.hljs{padding:3px 5px}/*!
+pre code.hljs{display:block;overflow-x:auto;padding-left:1.5em}code.hljs{padding:3px 5px}/*!
   Theme: StackOverflow Dark
   Description: Dark theme as used on stackoverflow.com
   Author: stackoverflow.com
